commit for deploy (anotherP)

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 
-VITE_BACKEND_URL = http://localhost:8080
-
-# Môi trường Deploy FrontEnd với Vercel: https://clonetiki-fe.vercel.app
-# Môi trường Deploy BackEnd với Render: https://clonetiki-be.onrender.com/
+VITE_BACKEND_URL = https://bookstore-be-nw40.onrender.com/
+# VITE_BACKEND_URL = 'http://localhost:8000/'
